k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsarops
  labels:
    app: pulsarops
    managed-by: kubectl
